--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.1",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/tabs": "^2.0.32",
@@ -26,10 +27,12 @@
     "framer-motion": "^11.2.13",
     "hugeicons-react": "^0.2.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vercel": "^34.3.1",
